Fix misalignment of LLVM wyvern

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -286,7 +286,7 @@
 .lein-icon:before          { .file-icons; content: "\f105"; font-size: 16px; top: 3px; .sharpen; transform: scale(1.15); }
 .lfe-icon:before           { .file-icons; content: "\e94c"; font-size: 16px; top: 2px; }
 .lisp-icon:before          { .file-icons; content: "\e908"; font-size: 12px; }
-.llvm-icon:before          { .file-icons; content: "\e91d"; font-size: 17px; top: 2px; }
+.llvm-icon:before          { .file-icons; content: "\e91d"; font-size: 17px; top: 3px; }
 .logtalk-icon:before       { .file-icons; content: "\e98d"; top: 2px; .sharpen; }
 .lookml-icon:before        { .file-icons; content: "\e98e"; font-size: 16px; top: 2px; .sharpen; }
 .ls-icon:before            { .file-icons; content: "\e914"; font-size: 14px; top: 2px; }
